View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026762 | Open CASCADE | OCCT:Data Exchange | public | 2015-10-09 08:34 | 2016-04-20 15:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026762: Static parameter "read.scale.unit" is not used | ||||
Description | This static parameter is not used anymore, and can be removed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26762 has been created by abv. SHA-1: 5bb60fc11566e51f363ba82240e4f509f8ec3815 Detailed log of new commits: Author: abv Date: Fri Dec 18 15:14:39 2015 +0300 0026762: Static parameter "read.scale.unit" is not used Parameter "read.scale.unit" is removed from sources and docs |
|
Fixed, please review |
|
Branch CR26762 is ready to be tested |
|
Dear BugMaster, Branch CR26762 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 5bb60fc11566e51f363ba82240e4f509f8ec3815 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 132 (134 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 89955599 / 89661913 [+0.33%] Total CPU difference: 19152.449999999884 / 19100.31999999988 [+0.27%] products component : Total MEMORY difference: 25145606 / 25051552 [+0.38%] Total CPU difference: 7157.010000000034 / 7614.170000000021 [-6.00%] Testing on Windows: occt component : http://occt-tests/CR26762-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html CPU heal wire_tails_composed A7: 0.8736056 / 0.0468003 [+1766.67%] CPU heal wire_tails_composed: 5.5068353 / 1.8876121 [+191.74%] CPU bugs modalg_4 bug625: 1.3728088 / 0.6864044 [+100.00%] CPU bugs moddata_1 bug20: 2.8860185 / 0.1872012 [+1441.67%] CPU bugs moddata_1 bug22789: 0.6864044 / 0.0780005 [+780.00%] CPU bugs moddata_2 bug536_13: 0.7332047 / 0.156001 [+370.00%] CPU bugs moddata_2 bug536_12: 0.8112052 / 0.1248008 [+550.00%] CPU bugs modalg_6 bug26897: 0.9516061 / 0.1872012 [+408.33%] CPU bugs modalg_6 bug26775: 0.7488048 / 0.156001 [+380.00%] Total MEMORY difference: 54626728 / 54646468 [-0.04%] Total CPU difference: 17658.860797098852 / 18199.076659998824 [-2.97%] products component : Total MEMORY difference: 15872648 / 15888169 [-0.10%] Total CPU difference: 5610.653965499969 / 5857.385147099993 [-4.21%] There are no differences in images found by testdiff. |
|
Dear abv, Branch CR26762 has been rejected due to: - CPU problem |
|
Please re-measure: these changes should not affect performance in any way since they just remove unused parameter |
|
Dear BugMaster, Branch CR26762 is TESTED. |
|
Branch CR26762 has been deleted by kgv. SHA-1: 5bb60fc11566e51f363ba82240e4f509f8ec3815 |
occt: master 59e4f50b 2015-12-18 12:14:39 Committer: bugmaster Details Diff |
0026762: Static parameter "read.scale.unit" is not used Parameter "read.scale.unit" is removed from sources and docs |
Affected Issues 0026762 |
|
mod - dox/user_guides/iges/iges.md | Diff File | ||
mod - dox/user_guides/step/step.md | Diff File | ||
mod - src/XSAlgo/XSAlgo.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-09 08:34 |
|
New Issue | |
2015-10-09 08:34 |
|
Assigned To | => gka |
2015-12-18 15:14 | git | Note Added: 0049294 | |
2015-12-18 15:15 | abv | Note Added: 0049295 | |
2015-12-18 15:15 | abv | Status | new => resolved |
2015-12-18 15:15 | abv | Steps to Reproduce Updated | |
2015-12-18 15:17 | gka | Note Added: 0049296 | |
2015-12-18 15:17 | gka | Assigned To | gka => bugmaster |
2015-12-18 15:17 | gka | Status | resolved => reviewed |
2015-12-18 15:17 | gka | Note Edited: 0049296 | |
2015-12-18 15:21 |
|
Assigned To | bugmaster => mkv |
2015-12-22 13:39 |
|
Note Added: 0049435 | |
2015-12-22 13:40 |
|
Note Added: 0049436 | |
2015-12-22 13:40 |
|
Assigned To | mkv => abv |
2015-12-22 13:40 |
|
Status | reviewed => assigned |
2015-12-22 13:40 |
|
Test case number | => Not needed |
2015-12-22 13:46 | abv | Note Added: 0049438 | |
2015-12-22 13:46 | abv | Assigned To | abv => mkv |
2015-12-22 13:46 | abv | Status | assigned => feedback |
2015-12-22 14:12 |
|
Note Added: 0049445 | |
2015-12-22 14:12 |
|
Assigned To | mkv => bugmaster |
2015-12-22 14:12 |
|
Status | feedback => tested |
2015-12-25 19:04 | bugmaster | Changeset attached | => occt master 59e4f50b |
2015-12-25 19:04 | bugmaster | Status | tested => verified |
2015-12-25 19:04 | bugmaster | Resolution | open => fixed |
2016-04-17 13:54 | git | Note Added: 0052988 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |