0026762: Static parameter "read.scale.unit" is not used

Parameter "read.scale.unit" is removed from sources and docs